deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-non-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: chat
        tier: backend
        track: stable
      name: llama-non-pod
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/nodegroup
                operator: In
                values:
                - intensive-node 
      containers:
        - name: chat
          image: 902415107800.dkr.ecr.us-east-1.amazonaws.com/llama7b-hf-NON-optim:2.19
          ports:
            - name: app-port
              containerPort: 8000
          volumeMounts:
            - name: efs-volume-1
              mountPath: /efs_mounted
      imagePullSecrets:
        - name: ecr-secret
      volumes:
        - name: efs-volume-1
          persistentVolumeClaim:
            claimName: efs-claim100

---
apiVersion: v1
kind: Service
metadata:
  name: llama-non-service
  labels:
    app.kubernetes.io/name: llama-non-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: backend
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: frontend
  template:
    metadata:
      labels:
        app: chat
        tier: frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/nodegroup
                operator: In
                values:
                - lightnode 
      containers:
      - name: react-frontend
        image: 902415107800.dkr.ecr.us-east-1.amazonaws.com/front_end:1.24
        ports:
            - name: app-port
              containerPort: 3000
      imagePullSecrets:
        - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app.kubernetes.io/name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: frontend
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: chat-main
  template:
    metadata:
      labels:
        app: chat
        tier: chat-main
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
                # THIS HAS TO BE CHANGED IN ORDER TO SET WITH YOUR NODE
              - key: eks.amazonaws.com/nodegroup
              #- key : iks-vm-u22-cd-wk-1-28-4-23-11-24  
                operator: In
                values:
                - light_node
      containers:
      - name: chat-main
        image: 902415107800.dkr.ecr.us-east-1.amazonaws.com/LLMs_front_end:4.42
        ports:
            - name: app-port
              containerPort: 5000
      imagePullSecrets:
        - name: ecr-secret
      serviceAccountName: frontend-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: chat-main-service
  labels:
    app.kubernetes.io/name: chat-main-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: chat-main
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
  

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatopenai-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: chatopenai-main
  template:
    metadata:
      labels:
        app: chat
        tier: chatopenai-main
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/nodegroup
                operator: In
                values:
                - light_node
      containers:
      - name: chatopenai
        image: 902415107800.dkr.ecr.us-east-1.amazonaws.com/openai:1.8
        ports:
            - name: app-port
              containerPort: 4000
        volumeMounts:
            - name: efs-volume-1
              mountPath: /efs_mounted
      imagePullSecrets:
        - name: ecr-secret
      volumes:
        - name: efs-volume-1
          persistentVolumeClaim:
            claimName: efs-claim100

---
apiVersion: v1
kind: Service
metadata:
  name: chatopenai-main-service
  labels:
    app.kubernetes.io/name: chatopenai-main-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: chatopenai-main
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama7b-optim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: llama7b-optim
  template:
    metadata:
      labels:
        app: chat
        tier: llama7b-optim
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/nodegroup
                operator: In
                values:
                - intensive-node 
      containers:
      - name: chatopenai
        image: 902415107800.dkr.ecr.us-east-1.amazonaws.com/llama7b-hf-optim:1.0
        ports:
            - name: app-port
              containerPort: 4000
        volumeMounts:
            - name: efs-volume-1
              mountPath: /efs_mounted
      imagePullSecrets:
        - name: ecr-secret
      volumes:
        - name: efs-volume-1
          persistentVolumeClaim:
            claimName: efs-claim100

---
apiVersion: v1
kind: Service
metadata:
  name: llama7b-opt-service
  labels:
    app.kubernetes.io/name: llama7b-opt-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: llama7b-optim
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
